--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,21 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.6.1</version>
         </plugin>
+          <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.5.0</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>edu.eci.cvds.patterns.archetype.App</mainClass>
+        </configuration>
+      </plugin>
       </plugins>
     </pluginManagement>
   </build>
