--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,8 @@
           </execution>
         </executions>
         <configuration>
-          <mainClass>edu.eci.cvds.patterns.archetype.App</mainClass>
+          <!-- <mainClass>edu.eci.cvds.patterns.archetype.App</mainClass> -->
+          <mainClass>edu.eci.cvds.patterns.shapes.ShapeMain</mainClass>          
         </configuration>
       </plugin>
       </plugins>
